[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teleget9527"
version = "2.0.0"
description = "TeleGet - High-speed Telegram file downloader SDK with multi-connection parallel downloading"
readme = "README.md"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.9"
keywords = ["telegram", "downloader", "mtproto", "parallel", "telethon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Telethon>=1.38.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
fast = ["cryptg>=0.4.0"]
proxy = ["PySocks>=1.7.0"]
all = ["cryptg>=0.4.0", "PySocks>=1.7.0"]

[project.urls]
Homepage = "https://chatdex.cc"
Documentation = "https://chatdex.cc"
Repository = "https://github.com/xwc9527/TeleGet"
Issues = "https://github.com/xwc9527/TeleGet/issues"

[tool.setuptools]
py-modules = [
    "tg_downloader",
    "download_pool",
    "download_config",
    "download_manager_v2",
    "download_daemon_core",
    "download_daemon",
    "download_ipc",
    "download_event_bus",
    "download_protocol_v2",
    "download_checkpoint",
    "download_logger",
    "download_monitor",
    "sparse_file_utils",
    "proxy_utils",
]
